crates/test-files/fixtures/compile_errors/call_non_pub_fn_on_struct.fe
struct Foo {
    fn do_private_thingz() {
    }
}

contract Bar {
    fn test() {
        Foo::do_private_thingz()
    }
}
